--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "styled-components": "^6.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
