--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "firebase": "^10.6.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.23.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rollup": "^4.5.1",
+    "use-window-focus": "^1.4.2"
   },
   "devDependencies": {
     "@tanstack/react-query": "^5.8.4",
